; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/extr_o_fips.c_FIPS_mode_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/extr_o_fips.c_FIPS_mode_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRYPTO_F_FIPS_MODE_SET = common dso_local global i32 0, align 4
@CRYPTO_R_FIPS_MODE_NOT_SUPPORTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FIPS_mode_set(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %11

7:                                                ; preds = %1
  %8 = load i32, i32* @CRYPTO_F_FIPS_MODE_SET, align 4
  %9 = load i32, i32* @CRYPTO_R_FIPS_MODE_NOT_SUPPORTED, align 4
  %10 = call i32 @CRYPTOerr(i32 %8, i32 %9)
  store i32 0, i32* %2, align 4
  br label %11

11:                                               ; preds = %7, %6
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @CRYPTOerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
